--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 <link type="text/css" rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile.structure-1.0.1.min.css?n0jjb7" media="all" />
 <link type="text/css" rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css?n0jjb7" media="all" />
  <!--  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">-->
-     <link rel="stylesheet" href="sites/all/themes/jqmtheme/foundation-icons/foundation-icons.css">
+     <link rel="stylesheet" href="http://m.reisandirvys.com/sites/all/themes/jqmtheme/foundation-icons/foundation-icons.css">
      <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 	 <script type="text/javascript">stLight.options({publisher:'[1bc31927-1da8-4f8a-918e-371ce15268c9]'});</script> 
    
@@ -40,8 +40,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
 <body class="html front not-logged-in no-sidebars page-node" > 
 
     <div  data-theme="d" data-role="page" class="page type-home"	>
-	<div id="header" 
- data-theme="d" data-position="fixed" data-role="header"> 									</div>
+	<!--<div id="header" 
+ data-theme="d" data-position="fixed" data-role="header"> 									</div>-->
 	<!-- /#header -->
 	<div class="main-content"  data-theme="d" data-role="content"		>
 		<div class="content-primary">
@@ -66,7 +66,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
   <div class="content">
     <div class="field field-name-field-what-is-image field-type-image field-label-hidden"><div class="field-items"><div class="field-item even"><img typeof="foaf:Image" src="./sites/default/files/styles/medium/public/week-four-rasin-texture-color.jpg?itok=fPbsyeFO" alt="" /></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>Enjoy yogurt with crunchy healthy cereals. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
-</div></div></div>  <div data-role="controlgroup" data-type="horizontal"><a href="./node/4.html" rel="tag" title="What&#039;s in this week?" data-role="button" data-icon="node-readmore">Read more<span class="element-invisible"> about What&#039;s in this week?</span></a><a href="./node/4.html" title="Jump to the first comment of this posting." property="sioc:num_replies" content="3" datatype="xsd:integer" rel="" data-role="button" data-icon="comment-comments">3 comments</a><a href="//user/login"><a href="/user/login?destination=node/4">Log in</a> or <a href="/user/register?destination=node/4">register</a> to post comments</a></div>    <!-- custom block -->
+</div></div></div>  <div data-role="controlgroup" data-type="horizontal"><a href="./node/4.html" rel="tag" title="What&#039;s in this week?" data-role="button" data-icon="node-readmore">Read more<span class="element-invisible"> about What&#039;s in this week?</span></a><a href="./node/4.html" title="Jump to the first comment of this posting." property="sioc:num_replies" content="3" datatype="xsd:integer" rel="" data-role="button" data-icon="comment-comments">3 comments</a><a href="//user/login"><a href="http://m.reisandirvys.com/user/login?destination=node/4">Log in</a> or <a href="http://m.reisandirvys.com/user/register?destination=node/4">register</a> to post comments</a></div>    <!-- custom block -->
    </div>
 
 
@@ -77,13 +77,13 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
 		</div>
 		<!-- /.content-primary -->
 		<div data-role="panel" id="defaultpanel" class="content-secondary" data-display="push">
-						<div class="navigation">
+				<!--		<div class="navigation">
 				<h2>Main Menu</h2><ul id="main-menu" class="links inline clearfix" data-role="listview" data-inset="true" data-theme="d" data-divider-theme="d" data-count-theme="d" data-split-theme="d" data-split-icon="arrow-r"><li data-icon="arrow-r" class="menu-218 first active"><a href="./index.html" title="" class="active">Home</a></li>
 <li data-icon="arrow-r" class="menu-639"><a href="/social" title="">Social</a></li>
 <li data-icon="arrow-r" class="menu-652"><a href="/shout" title="Promotional page">Shout out</a></li>
 <li data-icon="arrow-r" class="menu-650"><a href="/what" title="">What&#039;s in?</a></li>
 <li data-icon="arrow-r" class="menu-646 last"><a href="/vote">Vote</a></li>
-</ul> <h2>Secondary Menu</h2>			</div>
+</ul> <h2>Secondary Menu</h2>			</div>-->
 			<!-- /#navigation -->
 											</div>
 		<!-- /.content-secondary -->
@@ -93,7 +93,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
 
     
   <div class="content">
-    <ul id="btn-list-footer"><li class="ui-btn-inner">
+   <!-- <ul id="btn-list-footer"><li class="ui-btn-inner">
 	<a href="/"><i class="step menu fi-home size-36"></i></a>
 	</li>
 <li class="ui-btn-inner">
@@ -111,7 +111,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
 <li class="ui-btn-inner">
 	<a href="/user"><i class="step menu fi-torso size-36"></i></a>
 	</li>
-</ul>  </div>
+</ul> --> </div>
 </div>
   </div>
 	</div>
