--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
 
     
   <div class="content">
-    <form action="http://m.reisandirvys.com/user" method="post" id="user-login" accept-charset="UTF-8"><div>  <label for="edit-name">Username <span class="form-required" title="This field is required.">*</span></label>
+    <form action="http://www.m.reisandirvys.com/node?destination=node%3Fmag%3D1%26mag_q%3Dnode" method="post" id="user-login" accept-charset="UTF-8"><div>  <label for="edit-name">Username <span class="form-required" title="This field is required.">*</span></label>
  <input type="text" id="edit-name" name="name" value="" size="60" maxlength="60" class="form-text required" />
 <!--<div class="description">Enter your Reis &amp; Irvy&#039;s username.</div>-->
   <label for="edit-pass">Password <span class="form-required" title="This field is required.">*</span></label>
@@ -83,9 +83,9 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
 											</div>
 		<!-- /.content-secondary -->
 	</div>
-	<div id="footer" 		>   <div class="region region-footer">
+	<!--<div id="footer" 		>   <div class="region region-footer">
     <div id="block-block-1" class="block block-block">
-
+-->
     
  <!-- <div class="content">
     <ul id="btn-list-footer"><li class="ui-btn-inner">
@@ -107,10 +107,10 @@ jQuery.extend(Drupal.settings, {"basePath":"\u002F", "pathPrefix":"", "ajaxPageS
 	<a href="/user"><i class="step menu fi-torso size-36"></i></a>
 	</li>
 </ul>  </div>-->
-</div>
+<!--</div>
   </div>
 	</div>
-	<!-- /#footer -->
+-->	<!-- /#footer -->
 </div>
 <!-- /#page -->  </body>
 </html>
